<resources>
    <string name="app_name">Bisyarat</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Bahasa Isyarat? Di Bisyarat aja!</string>
    <string name="title_welcome_page">Selamat datang di Bisyarat!</string>
    <string name="title_signup_page">Lengkapi data dirimu dulu ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="required">Required*</string>
    <string name="errorEmail">Masukkan Email yang Valid</string>
    <string name="errorEmptyField">Field Tidak Boleh Kosong</string>
    <string name="tv_title">Judul Story</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur suscipit ullamcorper ex, consequat placerat velit venenatis ac. Aliquam erat volutpat. Vestibulum sodales eros vitae diam bibendum, in accumsan ipsum pharetra. Donec nibh mauris, lacinia lacinia sodales eu, posuere vel sem. Morbi maximus nunc at sem fermentum, ac semper orci gravida.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="ketik_des">description</string>
    <string name="empty_image_warning">Tidak ada gambar!</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="email_atau_username">Email atau Username</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_username">Hai, Ihsan Fattah</string>
    <string name="judul_card_home">Perkembangan Kursus</string>
    <string name="description_card_home">Progres Kamu Sudah Berjalan 60%, Semangat!</string>
    <string name="kursus_saya">Kursus Saya</string>
    <string name="course_category">Course Category</string>
    <string name="belajar_huruf">Belajar Huruf</string>
    <string name="selesai_30">Selesai 30%</string>
    <string name="hijau">Hijau</string>
    <string name="alert_register">Berhasil membuat akun!</string>

</resources>