<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:clickable="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <ImageView
               android:id="@+id/img_item_photo"
               android:layout_width="60dp"
               android:layout_height="60dp"
               android:contentDescription="@string/course_category"
               android:adjustViewBounds="true"
               android:scaleType="centerCrop"
               android:layout_marginStart="10dp"
               android:layout_marginTop="20dp"
               android:layout_marginBottom="20dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               tools:ignore="ImageContrastCheck"
               tools:srcCompat="@drawable/abc_logo"/>

            <TextView
                android:id="@+id/tv_title_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/iv_next_navigate"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toTopOf="@+id/img_item_photo"
                tools:text="@string/belajar_huruf"/>

            <TextView
                android:id="@+id/tv_progress_category"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="15sp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toTopOf="@+id/id_linear_indicator"
                app:layout_constraintEnd_toEndOf="@+id/iv_next_navigate"
                app:layout_constraintStart_toEndOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_category"
                app:layout_constraintEnd_toStartOf="@+id/iv_next_navigate"
                tools:text="@string/selesai_30"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/id_linear_indicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:progress="30"
                app:indicatorColor="@color/primary"
                app:trackThickness="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
                app:layout_constraintEnd_toStartOf="@+id/iv_next_navigate"
                app:layout_constraintStart_toStartOf="@+id/tv_title_category"
                app:layout_constraintTop_toBottomOf="@+id/tv_progress_category" />

            <ImageView
                android:id="@+id/iv_next_navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/navigate_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>