<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="999dp"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_home_bisyarat"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/logo_bisyarat_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/welcome_username"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.574"
                android:textColor="@color/onWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Yuk, Belajar Bahasa Isyarat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="20dp"
                android:textColor="@color/onWhite"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                app:layout_constraintVertical_bias="0.12" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:src="@drawable/banner_bisyarat_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/card_home_bisyarat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/onWhite"
          android:orientation="vertical">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginStart="20dp"
              android:layout_marginEnd="20dp"
              android:layout_marginTop="20dp"
              android:layout_marginBottom="10dp"
              app:cardCornerRadius="4dp">

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <TextView
                      android:id="@+id/progressTv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="sans-serif"
                      android:lineSpacingExtra="4sp"
                      android:padding="12dp"
                      tools:text="0%"
                      android:text="0%"
                      android:textColor="@color/black"
                      android:textSize="18sp"
                      android:textStyle="bold"
                      app:layout_constraintStart_toStartOf="@id/circular_progress_indicator"
                      app:layout_constraintBottom_toBottomOf="@+id/circular_progress_indicator"
                      app:layout_constraintEnd_toEndOf="@+id/circular_progress_indicator"
                      app:layout_constraintTop_toTopOf="@+id/circular_progress_indicator" />


                  <com.google.android.material.progressindicator.CircularProgressIndicator
                      android:id="@+id/circular_progress_indicator"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:indicatorSize="60dp"
                      android:indeterminate="false"
                      android:progress="0"
                      app:indicatorColor="@color/primary"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:padding="10dp"
                      app:trackColor="@color/onWhite"
                      app:trackThickness="6dp"/>

                  <TextView
                      android:id="@+id/textView2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/judul_card_home"
                      app:layout_constraintBottom_toTopOf="@+id/tv_welcome_progress"
                      app:layout_constraintStart_toEndOf="@+id/circular_progress_indicator"
                      app:layout_constraintTop_toTopOf="parent"
                      android:textStyle="bold"
                      android:textSize="16sp"
                      android:layout_marginTop="10dp"/>

                  <TextView
                      android:id="@+id/tv_welcome_progress"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="10dp"
                      android:text="@string/description_card_home"
                      android:textSize="14sp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintHorizontal_bias="0.0"
                      app:layout_constraintStart_toEndOf="@+id/circular_progress_indicator"
                      app:layout_constraintTop_toBottomOf="@+id/textView2" />

              </androidx.constraintlayout.widget.ConstraintLayout>

          </androidx.cardview.widget.CardView>

          <TextView
              android:id="@+id/kursus_saya"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="20dp"
              android:layout_marginTop="10dp"
              android:text="@string/kursus_saya"
              android:textStyle="bold"/>

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/rv_category"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="80dp"
         />


      </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>